Fixed post editor items getting cut off on iOS (#16765)

--- a/ghost/admin/app/styles/layouts/editor.css
+++ b/ghost/admin/app/styles/layouts/editor.css
@@ -305,7 +305,7 @@
 }
 
 .gh-editor-header {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     left: 0;
@@ -361,7 +361,7 @@
 }
 
 .gh-editor-wordcount-container {
-    position: absolute;
+    position: fixed;
     right: 30px;
     bottom: 30px;
     display: flex;
